# prevert

./: .gitignore  README.md  prevert.py
pypi_publication/: MANIFEST.in  pyproject.toml  requirements.txt
pypi_publication/src/prevert/: __init__.py
pypi_publication/tests/: example.prevert  test_reading.py
