
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prevert"
version = "1.0.2"
description = "Iterator for prevert files"
readme = "README.md"
authors = [
{ name = "Peter Rupnik", email = "peter.rupnik@ijs.si" },
{ name = "Nikola Ljubešić", email = "nikola.ljubesic@ijs.si" },
{ name = "Taja Kuzman", email = "taja.kuzman@ijs.si" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["prevertical", "prevert", "macocu"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/macocu/prevert/"